--- a/noticia.html
+++ b/noticia.html
@@ -7,13 +7,13 @@
     </head>
     <body>
         <h1>
-            Noticia do dia 19/06/2025 - DeFato Online
+            Trevo da BR-381 em São Gonçalo do Rio Abaixo se torna marco logístico e fortalece atração de investimentos
         </h1>
         <h2>
-            Trevo da BR-381 em São Gonçalo do Rio Abaixo se torna marco logístico e fortalece atração de investimentos
+            Com localização estratégica entre a Região Metropolitana de Belo Horizonte e o Vale do Aço — arranjo industrial responsável por cerca de 38% do PIB de Minas Gerais, São Gonçalo do Rio Abaixo acaba de concluir a maior intervenção viária de sua história.
         </h2>
         <p>
-            Com localização estratégica entre a Região Metropolitana de Belo Horizonte e o Vale do Aço — arranjo industrial responsável por cerca de 38% do PIB de Minas Gerais, segundo dados da Fundação João Pinheiro —, São Gonçalo do Rio Abaixo acaba de concluir a maior intervenção viária de sua história. O novo trevo da BR-381, um investimento de R$ 50 milhões em recursos próprios do Executivo são-gonçalense, transforma a entrada da cidade em um grande ativo competitivo para atração de empresas e expansão econômica.
+            O novo trevo da BR-381, um investimento de R$ 50 milhões em recursos próprios do Executivo são-gonçalense, transforma a entrada da cidade em um grande ativo competitivo para atração de empresas e expansão econômica.
         </p>
         <p>
             A nova estrutura, localizada às margens da BR-381, uma das principais rotas logísticas do País, traz 1,4 km de pista duplicada, rotatórias modernas, túnel e iluminação em LED. Além de proporcionar fluidez e segurança ao tráfego, o trevo estabelece conexão direta com as três principais áreas industriais do município, tornando o acesso mais ágil para transportes e visitantes. Outro benefício importante é a redução do fluxo de veículos pelo Centro Histórico, preservando a mobilidade urbana e o patrimônio da cidade.
