--- a/noticia2.html
+++ b/noticia2.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <header>
+            <h1>
             Portal de noticias
+            </h1>
+            <img src = "https://picsum.photos/50">
             <ul>
                 <li>Noticia do dia</li>
                 <li>Esportes</li>
