--- a/Tabelas/tenistas.html
+++ b/Tabelas/tenistas.html
@@ -86,6 +86,13 @@
                     <td>3130</td>
                 </tr>
             </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="5">
+                        Data de coleta 02/07/2025 - Site: <a href="https://www.sofascore.com/pt/tenis/classificacoes/atp">ATP</a>
+                    </td>
+                </tr>
+            </tfoot>
         </table>
     </body>
 </html>
