--- a/CSS/Seletores/Seletores.html
+++ b/CSS/Seletores/Seletores.html
@@ -13,10 +13,17 @@
             <p>
                 Paragrafo referente a sengunda parte
             </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim minima reprehenderit quod ullam harum soluta nihil, blanditiis similique ex ipsum eligendi voluptatibus obcaecati et inventore dolore mollitia tempore omnis natus?
+            </p>
         </section>
         <section>
+            <h1>Terceira Parte</h1>
             <p class="destaque">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum pariatur aliquam quas blanditiis, nihil porro molestiae! Aut, <strong class="destaque">voluptas eaque. Ab veritatis soluta autem sed?</strong> Dignissimos eligendi officiis aut maiores accusamus.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim minima reprehenderit quod ullam harum soluta nihil, blanditiis similique ex ipsum eligendi voluptatibus obcaecati et inventore dolore mollitia tempore omnis natus?
             </p>
         </section>
     </body>
